[gd_scene load_steps=5 format=3 uid="uid://bu55w2k50pmp1"]

[ext_resource type="Script" uid="uid://dmgs7kw8b6g1m" path="res://scenes/options menu/options_menu.gd" id="1_c7fuo"]
[ext_resource type="FontFile" uid="uid://dbyrp1xpwysxa" path="res://font/Tektur-VariableFont_wdth,wght.ttf" id="1_qq04v"]
[ext_resource type="PackedScene" uid="uid://ckpyg5xibxjx1" path="res://scenes/options menu/settings_tab_container.tscn" id="3_a3m13"]
[ext_resource type="Texture2D" uid="uid://dwblficic883j" path="res://sprites/Bubbles.png" id="4_bdmka"]

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7fuo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_qq04v")
theme_override_font_sizes/font_size = 52
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings_Tab_Container" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_a3m13")]
layout_mode = 2
size_flags_vertical = 3

[node name="Exit_Button" type="Button" parent="."]
custom_minimum_size = Vector2(220, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -101.0
offset_right = 133.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.0023118, 1.0735132)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_right = NodePath("../Credits_button")
theme_override_fonts/font = ExtResource("1_qq04v")
theme_override_font_sizes/font_size = 44
theme_override_icons/icon = ExtResource("4_bdmka")
text = "Exit"
icon = ExtResource("4_bdmka")
expand_icon = true

[node name="Credits_button" type="Button" parent="."]
custom_minimum_size = Vector2(220, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 594.4
offset_top = -101.0
offset_right = 814.40027
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.0023118, 1.0735132)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Exit_Button")
theme_override_fonts/font = ExtResource("1_qq04v")
theme_override_font_sizes/font_size = 44
theme_override_icons/icon = ExtResource("4_bdmka")
text = "Credits"
icon = ExtResource("4_bdmka")
expand_icon = true

[connection signal="button_down" from="Credits_button" to="." method="_on_credits_button_button_down"]
